--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="nav-container">
         <div class="logo">
             <i class="fab fa-airbnb"></i>
-            <span>airbnb</span>
+            <span>Amazing</span>
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Start your search">
